than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

219156  [380] handle statically linked malloc and/or other malloc libs
254088  [380] Valgrind should know about UD2 instruction
284004  [381] == 301281
289584  [381] Unhandled instruction: 0xF 0x29 0xE5 (MOVAPS)
295808  [381] amd64->IR: 0xF3 0xF 0xBC 0xC0 (TZCNT)
301280  [380] == 254088
301281  [381] valgrind hangs on OS X when the process calls system()
301902  [380] == 254088
304346  [380] == 219156
304754  [380] NEWS blows TeX's little mind
304867  [381] implement MOVBE instruction in x86 mode
305042  [381] amd64: implement 0F 7F encoding of movq between two registers
305199  [381] ARM: implement QDADD and QDSUB
305321  [381] amd64->IR: 0xF 0xD 0xC (prefetchw)
n-i-bz  [381] shmat of a segment > 4Gb does not work 
n-i-bz  [381] gdbserver_tests/simulate_control_c script wrong USR1 sig# on mips
n-i-bz  [381] vgdb ptrace calls wrong on mips, causing blocked syscalls to fail 
n-i-bz  [381] Fixes for more MPI false positives

305513  [381] killed by fatal signal: SIGSEGV
304980  [381] Assertion 'lo <= hi' failed in vgModuleLocal_find_rx_mapping
298281  [381] wcslen causes false(?) uninitialised value warnings
n-i-bz  [381] exp-sgcheck's memcpy causes programs to segfault



Release 3.8.0 (10 August 2012)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.8.0 is a feature release with many improvements and the usual
collection of bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM/Linux, PPC32/Linux,
PPC64/Linux, S390X/Linux, MIPS/Linux, ARM/Android, X86/Android,
X86/MacOSX 10.6/10.7 and AMD64/MacOSX 10.6/10.7.  Support for recent
distros and toolchain components (glibc 2.16, gcc 4.7) has been added.
There is initial support for MacOSX 10.8, but it is not usable for
serious work at present.
