@@ -1,0 +1,2 @@
+prereq: ../../../tests/s390x_features s390x-genins
+prog: ecag
